# Semestre2

./: Arma.cpp  Arma.h  Ataques.cpp  Ataques.h  BolaDeFuego.cpp  BolaDeFuego.h  BoladeFuego.cpp  BoladeFuego.h  CMakeLists.txt  ConfiguracionJuego.cpp  ConfiguracionJuego.h  Corte.cpp  Corte.h  Curar.cpp  Curar.h  Duende.cpp  Duende.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Guerrero.cpp  Guerrero.h  Habilidad.cpp  Habilidad.h  Inventario.cpp  Inventario.h  Item.cpp  Item.h  Jugador.cpp  Jugador.h  Mago.cpp  Mago.h  Orco.cpp  Orco.h  Personaje.cpp  Personaje.h  PersonajeVJ.cpp  PersonajeVJ.h  Pocion.cpp  (+2 more)
Polimorfismo/: CMakeLists.txt  Hokage.cpp  Hokage.h  Magia.cpp  Magia.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  Powerup.cpp  Powerup.h  Prota.cpp  Prota.h  Sanin.cpp  Sanin.h  main.cpp
PolimorfismoZoo/: Animal.cpp  Animal.h  Ardilla.cpp  Ardilla.h  CMakeLists.txt  Cabra.cpp  Cabra.h  Coyote.cpp  Coyote.h  Foca.cpp  Foca.h  Gato.cpp  Gato.h  Oso.cpp  Oso.h  Perro.cpp  Perro.h  main.cpp
