cmake_minimum_required(VERSION 3.24)
project(POO)

set(CMAKE_CXX_STANDARD 17)

add_executable(POO main.cpp PersonajeVJ.cpp PersonajeVJ.h Mago.cpp Mago.h Guerrero.cpp Guerrero.h Enemigo.cpp Enemigo.h Duende.cpp Duende.h Orco.cpp Orco.h Inventario.cpp Inventario.h
        Ataques.cpp BolaDeFuego.cpp BolaDeFuego.h Curar.cpp Curar.h ConfiguracionJuego.cpp ConfiguracionJuego.h
        Corte.cpp
        Corte.h
        Corte.h
        Item.cpp
        Item.h
        Item.h
        Pocion.cpp
        Pocion.h
        Pocion.h
        Arma.cpp
        Arma.h
        Arma.h)