cmake_minimum_required(VERSION 3.27)
project(ProyectoPar3)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProyectoPar3 main.cpp
        Entidad.cpp
        Entidad.h
        Entidad.h
        Personaje.cpp
        Personaje.h
        Personaje.cpp
        Item.cpp
        Item.h
        Item.h
        Enemigo.cpp
        Enemigo.h
        Habilidad.cpp
        Habilidad.h
        Habilidad.h
        BoladeFuego.cpp
        BoladeFuego.h
        BoladeFuego.h
        Curar.cpp
        Curar.h
        Curar.h
        Inventario.cpp
        Inventario.h
        Inventario.h
        Jugador.cpp
        Jugador.h
        Jugador.cpp)
