cmake_minimum_required(VERSION 3.24)
project(Progra2smes)

set(CMAKE_CXX_STANDARD 17)

add_executable(Progra2smes main.cpp Ninja.cpp Ninja.h Persona.cpp Persona.h Persona.cpp Persona.cpp
        Ninja.h Sanin.cpp Sanin.h Hokage.cpp Hokage.h Magia.cpp Magia.h Magia.h Powerup.cpp Powerup.h Prota.cpp Prota.h)
